Text align, nav logo link fix.

--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,7 @@ h6 {
 
 .fixed-nav{
     padding-top: 80px;
+    text-align: justify;
 }
 
 @media (min-width:768px) {
